Added form controls

--- a/css/index.html
+++ b/css/index.html
@@ -9,8 +9,9 @@
   <body>
     <h1 style="text-align: center">CSS Demo</h1>
 
-    <div>
-      <a href="./flex_box.html">Flex Box</a>
+    <div style="display: flex;">
+      <a class="menu-item" href="./flex_box.html">Flex Box</a> | 
+      <a class="menu-item" href="./forms.html">Forms</a>
     </div>
     <hr/>
   </body>
